feat:[#92] OAuth 인증 구조 개선
 - OAuthController → AuthController 리네임 및 프론트엔드 리다이렉트 분리
 - JWT 필터 추상화 제거, 구체 클래스 직접 의존으로 단순화
 - CustomAuthenticationEntryPoint로 인증 실패 JSON 응답 처리
 - SecurityUserAccount에서 UserAccount 엔티티 의존 제거
 - @Value → @ConfigurationProperties 전환 (CORS, OAuth, Cookie)
 - application 프로파일 분리 (local/test/production)
 - TokenReuseDetectedException, @Modifying 캐시, UserOAuth 저장 버그 수정
 - JWT 토큰에 jti 클레임 추가
 - AuthControllerTest 추가